--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "proxy-from-env": "0.0.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.0",
     "coveralls": "^2.11.6",
     "eslint": "^2.2.0",
     "istanbul": "^0.4.2",
